--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "es6-module-loader": "^0.17.8",
     "gulp": "^3.8.11",
     "gulp-live-server": "0.0.29",
+    "gulp-open": "^1.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-typescript": "^2.6.0",
     "gulp-watch": "^4.3.5",
